[package]
name = "relay"
license = "MIT"
version = "0.1.0"
edition = "2024"

[build-dependencies]

[dependencies]
actix-web = "4.12.0"
log = "0.4.28"
dotenvy = "0.15.7"
env_logger = "0.11.8"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
actix-web-httpauth = "0.8.2"

